src/reader/entry/tests/error/optional.sibs
@os window =>;
@os linux => [];
@os darwin => $file_name = "release{$version}-darwin.zip"
@os darwin => $file_name = "release{$version}-darwin.zip;
@os @darwin => $file_name = "release{$version}-darwin.zip";